# aaa-advanced-python-final-task

./: Makefile  README.md  pyproject.toml  template.py
src/: config.py  consts.py  game.py  main.py  utils.py
tests/: test_game.py  test_win.py
